# football-predictor

./: .gitignore  01_explore_data.ipynb  02_feature_engineering.ipynb  03_model.ipynb  04_predict.ipynb  05_tuning.ipynb  06_update.ipynb  07_feature_search.py  README.md  WORKFLOW.md  main.py  pyproject.toml
